--- a/c++/.vscode/tasks.json
+++ b/c++/.vscode/tasks.json
@@ -7,6 +7,8 @@
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
+                "..\\..\\utilities\\FileReader.cpp",
+                "..\\..\\day01\\solution.cpp",
                 "${file}",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
