--- a/c++/.vscode/settings.json
+++ b/c++/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "C_Cpp.default.compilerPath": "C:\\msys64\\ucrt64\\bin\\gcc.exe"
+    "C_Cpp.default.compilerPath": "C:\\msys64\\ucrt64\\bin\\gcc.exe",
+    "files.associations": {
+        "cassert": "cpp",
+        "iostream": "cpp"
+    }
 }
